@@ -1,3 +1,15 @@
+2021-06-17  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GLIB] Pass a GTlsCertificate to soup_server_new()
+        https://bugs.webkit.org/show_bug.cgi?id=227023
+
+        Reviewed by Michael Catanzaro.
+
+        Instead of using soup_server_set_ssl_cert_file() that will be removed from libsoup soon.
+
+        * TestWebKitAPI/glib/WebKitGLib/WebKitTestServer.cpp:
+        (WebKitTestServer::WebKitTestServer):
+
 2021-06-17  Fujii Hironori  <Hironori.Fujii@sony.com>
 
         [Win] TestWTF.WTF_WeakPtr.WeakHashMapIterators is crashing
